--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ a {
 }
 
 .left-column {
-  flex: 2;
+  flex: 3;
   padding: 40px;
 }
 
@@ -73,12 +73,6 @@ a {
   transform: scaleX(1);
 }
 
-
-
-#tiktok {
-  width: 24px;
-  height: 25px;
-}
 
 svg {
   fill: #ffffff;
@@ -193,3 +187,137 @@ h3 {
   transition: 0.5s;
   font-size: 14px;
 }
+
+.tip-right button:hover {
+  background-color: #7c9fa2;
+  color: #ffffff;
+}
+
+
+
+
+#hamburger-icon {
+  margin: auto 0;
+  display: none;
+  cursor: pointer;
+  z-index: 1; 
+  /* margin-left: 250px; */
+}
+
+#hamburger-icon div{
+  width: 35px;
+  height: 3px;
+  background-color: white;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
+.open .bar1 {
+  -webkit-transform: rotate(-45deg) translate(-6px, 6px);
+  transform: rotate(-45deg) translate(-6px, 6px);
+}
+
+.open .bar2 {
+  opacity: 0;
+}
+
+.open .bar3 {
+  -webkit-transform: rotate(45deg) translate(-6px, -8px);
+  transform: rotate(45deg) translate(-6px, -8px);
+}
+
+.open .mobile-menu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.mobile-menu {
+  display: none;
+  background-color: #41696D;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 200px;
+  z-index: -1;
+}
+
+.mobile-menu li {
+  margin-top: 40px;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.mobile-menu a {
+  color: #ffffff;
+  font-size: 16px;
+}
+
+
+
+
+
+
+
+@media (max-width: 768px) {
+
+ #header-links {
+    display: none;
+  }
+
+  #hamburger-icon {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding-left: 20px;
+    padding-top: 20px;
+  }
+
+  .container {
+    flex-direction: column;
+  }
+
+  .left-column {
+    text-align: center;
+  }
+
+  .right-column {
+    align-items: center;
+    margin-right: 140px;
+    margin-top: -49px;
+  }
+
+  .mail-list,
+  .tipjar-container {
+    display: flex;
+    flex-direction: column; 
+    align-items: center; 
+    text-align: center;
+  }
+
+  .tip-left {
+    width: 75%;
+  }
+
+  .mobile-menu {
+    margin: 0;
+  }
+
+  .mobile-menu a {
+    text-align: left;
+  }
+}
+
+
+
+
+
+
+
+
+
